--- a/examples/cfd-highcharts.html
+++ b/examples/cfd-highcharts.html
@@ -15,6 +15,7 @@
         <!-- Lumenize -->
         <script type="text/javascript" src="../lib/lumenize/deploy/lumenize-min.js" deploy_src="http://lmaccherone.github.com/Lumenize/deploy/lumenize-min.js"></script>
         
+        <!-- my calculator for this chart -->
         <script type="text/javascript" src="../lib/cfdcalculator.js"></script> 
         
         <script type="text/javascript">
